@@ -5,6 +5,7 @@ Changelog
 ------------------------
 
 - Allow text field in task deadline modification through API. [njohner]
+- Make `issuer` filterable in the @lising endpoint. [elioschmutz]
 - Downpin ftw.recipe.solr to 1.2.1 to have log4j configuration valid for solr < 7.4.X [deiferni]
 - Use plone.restapi summary serialization in the recently-touched endpoint. [phgross]
 - Fix a problem in the watcher handling when reassigning a task to the same user but a different org unit. [phgross]
